--- a/2_StrandSeq/nb_strand_seq.ipynb
+++ b/2_StrandSeq/nb_strand_seq.ipynb
@@ -6,8 +6,8 @@
    "id": "5d9a7b2b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-01-26T02:20:13.574858Z",
-     "start_time": "2024-01-26T02:20:13.113970Z"
+     "end_time": "2024-03-07T03:03:18.652711Z",
+     "start_time": "2024-03-07T03:03:18.126496Z"
     }
    },
    "outputs": [],
@@ -32,8 +32,8 @@
    "id": "a3a0477a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-01-26T02:20:13.721792Z",
-     "start_time": "2024-01-26T02:20:13.578025Z"
+     "end_time": "2024-03-07T03:03:18.811223Z",
+     "start_time": "2024-03-07T03:03:18.656926Z"
     }
    },
    "outputs": [],
@@ -47,8 +47,8 @@
    "id": "4ba09c24",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-01-26T02:20:14.602911Z",
-     "start_time": "2024-01-26T02:20:14.190966Z"
+     "end_time": "2024-03-07T03:03:18.875157Z",
+     "start_time": "2024-03-07T03:03:18.855048Z"
     }
    },
    "outputs": [],
@@ -69,12 +69,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "id": "c0d996a7",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-01-26T02:20:15.154401Z",
-     "start_time": "2024-01-26T02:20:14.734164Z"
+     "end_time": "2024-03-07T03:05:43.703831Z",
+     "start_time": "2024-03-07T03:05:42.246810Z"
     }
    },
    "outputs": [],
@@ -84,7 +84,7 @@
     "uniq_reads_list = []\n",
     "for run, cell in dat[[\"Run\", \"Cell\"]].values:\n",
     "    uniq_reads = 0\n",
-    "    path = \"results/mapping/mark_parental/%s/%s.flagstat\" % (run, cell)\n",
+    "    path = \"results/mapping/mark_duplicate/%s/%s.flagstat\" % (run, cell)\n",
     "    if os.path.exists(path):\n",
     "        for line in open(path):\n",
     "            if \"primary mapped\" in line:\n",
@@ -96,12 +96,44 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 34,
+   "id": "c6d19fac",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-03-07T03:18:13.827321Z",
+     "start_time": "2024-03-07T03:18:12.355458Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# reads\n",
+    "\n",
+    "total_read_list = []\n",
+    "uniq_read_list = []\n",
+    "for run, cell in dat[[\"Run\", \"Cell\"]].values:\n",
+    "    total_read = np.nan\n",
+    "    uniq_read = np.nan\n",
+    "    path = \"results/mapping/mark_duplicate/%s/%s.flagstat\" % (run, cell)\n",
+    "    if os.path.exists(path):\n",
+    "        for line in open(path):\n",
+    "            if line[:-1].endswith(\"primary\"):\n",
+    "                total_read = int(line.split()[0])\n",
+    "            if line[:-1].endswith(\"primary duplicates\"):\n",
+    "                uniq_read = total_read - int(line.split()[0])\n",
+    "    total_read_list.append(total_read)\n",
+    "    uniq_read_list.append(uniq_read)\n",
+    "dat[\"TotalReads\"] = total_read_list\n",
+    "dat[\"UniqReads\"] = uniq_read_list"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "id": "ceb95440",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-01-26T02:20:17.165467Z",
-     "start_time": "2024-01-26T02:20:15.157644Z"
+     "end_time": "2024-03-07T03:03:26.041249Z",
+     "start_time": "2024-03-07T03:03:19.268482Z"
     }
    },
    "outputs": [],
@@ -125,8 +157,8 @@
    "id": "445248cb",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-01-26T02:20:19.329658Z",
-     "start_time": "2024-01-26T02:20:17.169344Z"
+     "end_time": "2024-03-07T03:03:34.306155Z",
+     "start_time": "2024-03-07T03:03:26.044016Z"
     }
    },
    "outputs": [],
@@ -154,8 +186,8 @@
    "id": "f8a0c095",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-01-26T02:20:21.285843Z",
-     "start_time": "2024-01-26T02:20:19.331676Z"
+     "end_time": "2024-03-07T03:03:41.775232Z",
+     "start_time": "2024-03-07T03:03:34.309674Z"
     }
    },
    "outputs": [],
@@ -179,8 +211,8 @@
    "id": "0a27fd74",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-01-26T02:20:24.128809Z",
-     "start_time": "2024-01-26T02:20:21.288681Z"
+     "end_time": "2024-03-07T03:03:49.111060Z",
+     "start_time": "2024-03-07T03:03:41.779531Z"
     }
    },
    "outputs": [],
@@ -204,8 +236,8 @@
    "id": "c39a568b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-01-26T02:20:26.983936Z",
-     "start_time": "2024-01-26T02:20:24.131507Z"
+     "end_time": "2024-03-07T03:03:56.255811Z",
+     "start_time": "2024-03-07T03:03:49.113828Z"
     }
    },
    "outputs": [],
@@ -225,12 +257,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 35,
    "id": "ebe7fcf8",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-01-26T02:20:27.748397Z",
-     "start_time": "2024-01-26T02:20:26.986879Z"
+     "end_time": "2024-03-07T03:18:18.660869Z",
+     "start_time": "2024-03-07T03:18:18.020642Z"
     }
    },
    "outputs": [],
@@ -248,12 +280,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 45,
    "id": "92db774f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-01-26T02:20:28.187363Z",
-     "start_time": "2024-01-26T02:20:27.750375Z"
+     "end_time": "2024-03-07T03:20:26.012697Z",
+     "start_time": "2024-03-07T03:20:25.528519Z"
     }
    },
    "outputs": [
@@ -271,11 +303,11 @@
     "\n",
     "tmp = d[(d[\"Run\"] == \"20160928_PRJEB14185_CEU\") & (d[\"UniqReads\"] >= 800000) & (d[\"Background\"] < 0.05)]\n",
     "print(\"20160928_PRJEB14185_CEU:\", len(tmp))\n",
-    "tmp.to_excel(\"data/StrandSeq_StrandSeq_QC_Pass.xlsx\")\n",
+    "tmp.to_excel(\"data/StrandSeq_StrandSeq_QC_Pass.xlsx\", index=False)\n",
     "\n",
     "tmp = d[(d[\"Run\"] == \"20210729_PRJNA742746_HG001\") & (d[\"UniqReads\"] >= 2000000) & (d[\"Background\"] < 0.05)]\n",
     "print(\"20210729_PRJNA742746_HG001:\", len(tmp))\n",
-    "tmp.to_excel(\"data/StrandSeq_OPStrandSeq_QC_Pass.xlsx\")"
+    "tmp.to_excel(\"data/StrandSeq_OPStrandSeq_QC_Pass.xlsx\", index=False)"
    ]
   }
  ],
