--- a/0_PlotFigures/04_phasing/10_het_snp_bed_for_igv.ipynb
+++ b/0_PlotFigures/04_phasing/10_het_snp_bed_for_igv.ipynb
@@ -8,6 +8,13 @@
     "ExecuteTime": {
      "end_time": "2024-01-30T06:18:26.723338Z",
      "start_time": "2024-01-30T06:18:26.676389Z"
+    },
+    "execution": {
+     "iopub.execute_input": "2024-04-10T07:55:22.778954Z",
+     "iopub.status.busy": "2024-04-10T07:55:22.778499Z",
+     "iopub.status.idle": "2024-04-10T07:55:23.491310Z",
+     "shell.execute_reply": "2024-04-10T07:55:23.490868Z",
+     "shell.execute_reply.started": "2024-04-10T07:55:22.778936Z"
     }
    },
    "outputs": [],
@@ -24,6 +31,13 @@
     "ExecuteTime": {
      "end_time": "2024-01-30T06:18:26.871436Z",
      "start_time": "2024-01-30T06:18:26.851158Z"
+    },
+    "execution": {
+     "iopub.execute_input": "2024-04-10T07:55:24.831244Z",
+     "iopub.status.busy": "2024-04-10T07:55:24.830732Z",
+     "iopub.status.idle": "2024-04-10T07:55:24.835916Z",
+     "shell.execute_reply": "2024-04-10T07:55:24.835512Z",
+     "shell.execute_reply.started": "2024-04-10T07:55:24.831224Z"
     }
    },
    "outputs": [],
@@ -42,13 +56,10 @@
     "            if end - start != 1:\n",
     "                continue\n",
     "            rows.append([record.contig, start, end, \"%s|%s\" % (a1, a2)])\n",
-    "        \n",
     "    rows.sort()\n",
-    "    \n",
     "    with open(f_bed[:-3], \"w+\") as fw:\n",
     "        for row in rows:\n",
     "            fw.write(\"\\t\".join(map(str, row)) + \"\\n\")\n",
-    "    \n",
     "    cmd = \"bgzip -f %s\" % f_bed[:-3]\n",
     "    assert os.system(cmd) == 0\n",
     "    cmd= \"tabix -p bed -f %s\" % f_bed\n",
@@ -67,7 +78,7 @@
    },
    "outputs": [],
    "source": [
-    "f_vcf = \"../../GRCh38-HG001-Variant-Calls/results/benchmark_autosomal_v4.2.1_chrx_v3.3.2.vcf.gz\"\n",
+    "f_vcf = \"/lustre/grp/tfclab/chenzg/repositories/GRCh38_HG001_SNP_Indel/GRCh38_HG001_SNP_Indel.GIAB_v4.2.1_and_v3.3.2.vcf.gz\"\n",
     "f_bed = \"results/GIAB_hetSNPs.bed.gz\"\n",
     "make_het_snp_bed(f_vcf, f_bed)"
    ]
@@ -143,7 +154,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -157,7 +168,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.15"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
